syntax = "proto3";

package cluster.grpc;

service HelloService {
  rpc HelloMethod(HelloRequest) returns (HelloResponse);
  rpc IncrementCount(IncrementCounter) returns (IncrementCounter);
}

message HelloRequest {
  string message = 1;
}

message HelloResponse {
  string message = 1;
}

message IncrementCounter {
  int32 counter = 1;
}